# AlmaGag

./: .editorconfig  .gitignore  LICENSE  README.md  REFACTORING_SUMMARY.md  __init__.py  autolayout.py  config.py  generate_expected_diagram.py  generator.py  main.py  pyproject.toml  readme.pe.md  red-edificios.gag  roadmap-25-06-22.gag  svg_diagram_generator.py  test-auto-layout.gag  test-weighted-optimization.gag
.claude/: settings.local.json
AlmaGag/: config.py  debug.py  generator.py  main.py  renderer.py
AlmaGag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AlmaGag/draw/: __init__.py  building.py  connections.py  container.py  firewall.py  icons.py  server.py
AlmaGag/iteration_debug/: __init__.py  iteration_dumper.py
AlmaGag/layout/: __init__.py  auto_optimizer.py  auto_positioner.py  collision.py  container_calculator.py  geometry.py  graph_analysis.py  label_optimizer.py  laf_optimizer.py  layout.py  optimizer_base.py
AlmaGag/routing/: arc_router.py  bezier_router.py  manual_router.py  orthogonal_router.py  router_base.py  router_manager.py  straight_router.py
Samples/: calcular_primos_10_convertido.json  calcular_primos_10_espaciado.json  primos.gag
data/: calcular_primos_10.sdjf.gag  primos.gag
debug/: ANALISIS_PADDING_CONTENEDORES.md  CALCULO_CANVAS_LAF.md  DIAGNOSTICO_COLISIONES_ARQUITECTURA.md  FEATURE_BARYCENTER_BIDIRECCIONAL.md  FIX_CANVAS_BOUNDS.md  FIX_ETIQUETAS_LAF.md  FIX_HUB_CONTAINER_POSITIONING.md  IMPLEMENTACION_BARYCENTER_BIDIRECCIONAL.md  README.md  RESULTADOS_SOLUCION_1.md  analisis_colisiones_arquitectura.py  analizar_grupos.py  explicacion_fase2_abstract.md  explicacion_fase2_topology.md  explicacion_fase3_abstract.md  verificar_grupos.py
debug/density-tests/: ANALISIS.md
debug/notes/: FIX_SUMMARY.md  HIERARCHICAL_LAYOUT_IMPROVEMENTS.md
docs/: AUTOLAYOUT_EVOLUTION.md  CHANGELOG-2026-01-10.md  CHANGELOG.md  FLUJO_EJECUCION.md  INDEX.md  LAF-COMPARISON.md  LAF-PROGRESS.md  RELEASE_v3.0.0.md  ROADMAP.md  TECHNICAL_DEBT.md
docs/architecture/: ARCHITECTURE.md  EVOLUTION.md  IMPLEMENTATION_STRATEGY.md  SDJF_v2.1_IMPLEMENTATION_SUMMARY.md
docs/diagrams/: execution-flow.gag  roadmap-25-06-22.gag  svg-to-bwt-flow.gag
docs/examples/: 03-conexiones.gag  04-gradientes-colores.gag  05-arquitectura-gag.gag  08-auto-layout.gag
docs/guides/: CLI-REFERENCE.md  EXAMPLES.md  LAYOUT-DECISION-GUIDE.md  QUICKSTART.md
draw/: __init__.py  building.py  cloud.py  connections.py  container.py  firewall.py  icons.py  server.py
examples/: 01-iconos-registrados.gag  06-waypoints.gag  README.md  continentes-america.gag
scripts/: README.md  generate_docs.bat  generate_docs.py  generate_docs.sh  generate_examples.py  run_tests.py  test_density_penalty.py
tests/: README.md  __init__.py  test_pipeline_consistency.py  test_position_optimizer_normalization.py  test_terminal_leaf_nodes.py  test_topological_levels.py
(+43 files in other folders)
