[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AlmaGag"
version = "3.0.0"
description = "Generador Automático de Grafos - Genera diagramas SVG con layout jerárquico inteligente desde archivos JSON (SDJF v3.0)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jose", email = "jose@example.com"}
]
keywords = ["svg", "diagram", "graph", "generator", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "svgwrite>=1.4",
]

[project.optional-dependencies]
debug = []

[project.scripts]
almagag = "AlmaGag.main:main"

[project.urls]
Homepage = "https://github.com/Josexato/AlmaGag"
Repository = "https://github.com/Josexato/AlmaGag.git"
Issues = "https://github.com/Josexato/AlmaGag/issues"

[tool.setuptools]
packages = ["AlmaGag", "AlmaGag.draw", "AlmaGag.layout", "AlmaGag.layout.laf", "AlmaGag.routing", "AlmaGag.iteration_debug"]
package-dir = {"AlmaGag" = "AlmaGag"}
